client/src/App.css
#root {
  height: 100%;
  text-align: center;
}

body {
  margin: 0;
  height: 100%;
  overflow: hidden;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  position: fixed;
  width: 100%;
  text-align: left;
  top: 0;
  margin: 0;
  background-color: #181818;
  border-left: 1px solid white;
  border-bottom: 3px solid white;
  z-index: 1;
}

.app-title {
  font-size: 2rem;
  font-style: italic;
  margin-left: 1rem;
  margin-bottom: 0;
  margin-top: 3rem;
}

.menu-options {
  margin: auto 0.66rem 0.33rem auto;
}

.menu-options > span {
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.registration-form {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
}

.registration-form > div > input {
  padding: 0.33rem 1rem;
  font-size: 1;
}
.registration-form > input::placeholder {
  text-align: center;
}
.registration-form > button {
  margin-top: 0.66rem;
  filter: drop-shadow(0px 6px 0px #181818);
  background: none;
  border: none;
  font-size: 1rem;
}
.registration-form > button:hover {
  color: cyan;
}
.registration-form-inputs {
  display: flex;
  flex-flow: column nowrap;
  box-shadow: 0px 1px 12px 3px rgba(20, 20, 20, 0.5);
}

.login-form-switch,
.register-form-switch {
  filter: drop-shadow(0px 6px 0px #181818);
  margin-top: 0.66rem;
}

.login-form-switch:hover,
.register-form-switch:hover {
  cursor: pointer;
  color: cyan;
}

.register-error {
  position: absolute;
  top: 20%;
  max-width: 66%;
}

.messages-loading {
  margin-top: 50%;
}

.scroll-wrapper {
  position: relative;
  display: flex;
  flex-flow: column nowrap;
  justify-content: flex-end;
  border-left: 1px solid white;
  border-right: 1px solid white;
  height: 100vh;
  width: 66vw;
  margin: 0 auto;
  box-shadow: inset 0px 1rem 12px 3px rgba(0, 0, 0, 0.5);
  z-index: 0;
}

.messages-container {
  overflow-y: auto;
  font-size: 1rem;
  word-break: break-all;
  text-align: left;
  padding-left: 3rem;
  padding-right: 3rem;
  padding-top: 6rem;
  padding-bottom: 4rem;
}

.message-username::before {
  content: ":::[";
  color: var(--prime-blue);
}

.message-username::after {
  content: "]";
  color: var(--prime-blue);
}

.name-and-date {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 0.66rem;
  height: 1rem;
}

.time-at {
  margin: 0 1rem;
}

.message-content {
  border-right: 1px solid var(--prime-blue);
  border-top: 1px solid rgba(20, 20, 20, 0.9);
  padding: 0.33rem;
  border-radius: 0 7% 0 0;
  margin: 1rem auto;
}

.message-username,
.datetime {
  font-size: 0.66rem;
}

.message-text::before {
  content: "";
}

.message-text {
  padding-left: 2rem;
}

.error-box {
  position: absolute;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 1.33rem;
  color: wheat;
  bottom: 100%;
}

.chat-form {
  display: flex;
  position: fixed;
  width: 100vw;
  bottom: 2rem;
  left: 0;
  border-top: 1px solid #181818;
  border-bottom: 1px solid #181818;
}

.chat-msg-field {
  width: 100%;
  padding-left: 2rem;
  font-size: 1.33rem;
  border-radius: 0 3px 0 0;
  border: none;
  caret-color: cyan;
}

.chat-msg-field::placeholder {
  text-align: center;
}
.chat-msg-field:focus,
.chat-msg-field:active {
  border-bottom: 1px solid rgba(0, 255, 255, 0.333);
}

.msg-submit-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 9px;
  background-color: #181818;
  color: rgba(255, 255, 255, 0.874);
  transition: all 0.3s;
}

.session-utils-box {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  z-index: 3;
  width: 100vw;
  background-color: #181818;
  position: fixed;
  bottom: 0;
  padding-left: 1rem;
  padding-right: 1rem;
  height: 2rem;
}

.session-utils-box > button {
  background: none;
  border: none;
  color: rgba(200, 200, 200);
  height: 1.66rem;
  font-size: 0.66rem;
}

.session-utils-box > button:hover {
  background: rgba(30, 30, 30, 1);
}

.msg-submit-btn {
  border-radius: 0;
}
.msg-submit-btn:hover {
  cursor: pointer;
  background-color: rgba(255, 255, 255, 0.874);
  color: #181818;
}

